Fix z-index for pencil image

--- a/src/Omatech/Editora/Connector/Assets/css/front-edit.css
+++ b/src/Omatech/Editora/Connector/Assets/css/front-edit.css
@@ -1,4 +1,4 @@
-.front-edit { position:absolute !important; display:block; z-index: 1; border: 2px dotted gray; background-color: #ffffff;}
+.front-edit { position:absolute !important; display:block; z-index: 1; border: 2px dotted gray; background-color: #ffffff; z-index: 99999;}
 .front-edit-relative { position:relative !important; display:block; }
 
 .link-edit { color: black; float: right; background-color: white; border: 2px solid black; padding: 10px; position: fixed; right: 0px; top: 0px; z-index: 1000; }
